[package]
name = "rust-project"
version = "0.1.0"
authors = ["author"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "main"
path = "src/main.rs"

[lib]
name = "injected"
path = "src/injected/lib.rs"
crate-type = ["cdylib"]

[profile.release]
debug = true

[dependencies]
"winapi" = { version = "0.3.9", features = [
    "memoryapi",
    "winnt",
    "processthreadsapi",
    "minwindef",
    "errhandlingapi",
    "libloaderapi",
    "tlhelp32",
    "psapi",
] }
"sysinfo" = { version = "0.15.3" }
log = "0.4.11"
env_logger = "0.8.1"
tempfile = "3.1.0"
byteorder = "*"
hex-literal = "*"
twoway = "*"
