[package]
name = "injected-dll"
version = "0.1.0"
authors = ["author"]
edition = "2018"

[lib]
name = "injected"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
"winapi" = { version = "0.3.9", features = [
    "memoryapi",
    "winnt",
    "processthreadsapi",
    "minwindef",
    "errhandlingapi",
    "libloaderapi",
    "tlhelp32",
    "psapi",
    "d3d11",
    "d3d11_1",
    "d3d11sdklayers",
    "d3dcommon",
    "d3dcompiler",
    "dxgi1_2",
    "dxgi1_3",
    "dxgi1_4",
    "dxgi1_5",
] }
log = "0.4.11"
env_logger = "0.8.1"
tempfile = "3.1.0"
byteorder = "*"
hex-literal = "*"
twoway = "*"
backtrace = "*"
cxx = "*"
imgui = "*"

[build-dependencies]
cxx-build = "*"
