[package]
name = "injected-dll"
version = "0.1.0"
authors = ["author"]
edition = "2018"

[lib]
name = "injected"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
"winapi" = { version = "0.3.9", features = [
    "memoryapi",
    "winnt",
    "processthreadsapi",
    "minwindef",
    "errhandlingapi",
    "libloaderapi",
    "tlhelp32",
    "psapi",
    "d3d11",
    "d3d11_1",
    "d3d11sdklayers",
    "d3dcommon",
    "d3dcompiler",
    "dxgi1_2",
    "dxgi1_3",
    "dxgi1_4",
    "dxgi1_5",
] }
log = "*"
env_logger = "*"
byteorder = "*"
hex-literal = "*"
twoway = "*"
backtrace = "*"
cxx = "*"
cached = "*"

[build-dependencies]
cxx-build = "*"
