[package]
name = "dll-injector"
version = "0.1.0"
authors = ["author"]
edition = "2018"

[[bin]]
name = "main"
path = "src/main.rs"

[dependencies]
"winapi" = { version = "0.3.9", features = [
    "memoryapi",
    "winnt",
    "processthreadsapi",
    "minwindef",
    "errhandlingapi",
    "psapi",
] }
"sysinfo" = { version = "0.15.3" }
log = "0.4.11"
env_logger = "0.8.1"
tempfile = "3.1.0"