add_library(spel2_api STATIC
        vtable_hook.cpp
        vtable_hook.hpp
        character_def.cpp
        character_def.hpp
        game_allocator.cpp
        game_allocator.hpp
        entity.cpp
        entity.hpp
        entities_floors.hpp
        entities_floors.cpp
        entities_monsters.hpp
        entities_items.cpp
        entities_items.hpp
        entities_mounts.cpp
        entities_mounts.hpp
        entities_floors.cpp
        entities_floors.hpp
        entities_activefloors.cpp
        entities_activefloors.hpp
        entities_chars.cpp
        entities_chars.hpp
        entities_fx.hpp
        entities_liquids.hpp
        items.cpp
        items.hpp
        layer.cpp
        layer.hpp
        level_api.cpp
        level_api.hpp
        render_api.cpp
        render_api.hpp
        spawn_api.cpp
        spawn_api.hpp
        rpc.cpp
        rpc.hpp
        state.cpp
        state.hpp
        state_structs.hpp
        texture.cpp
        texture.hpp
        particles.cpp
        particles.hpp
        search.hpp
        memory.hpp
        thread_utils.cpp
        thread_utils.hpp
        movable.hpp
        window_api.cpp
        window_api.hpp
        script.cpp
        script.hpp
        script/script_impl.cpp
        script/script_impl.hpp
        script/script_util.cpp
        script/script_util.hpp
        script/usertypes/save_context.cpp
        script/usertypes/save_context.hpp
        script/usertypes/state_lua.cpp
        script/usertypes/state_lua.hpp
        script/usertypes/entity_lua.cpp
        script/usertypes/entity_lua.hpp
        script/usertypes/entity_casting_lua.cpp
        script/usertypes/entity_casting_lua.hpp
        script/usertypes/entities_mounts_lua.cpp
        script/usertypes/entities_mounts_lua.hpp
        script/usertypes/entities_monsters_lua.cpp
        script/usertypes/entities_monsters_lua.hpp
        script/usertypes/entities_items_lua.cpp
        script/usertypes/entities_items_lua.hpp
        script/usertypes/entities_floors_lua.cpp
        script/usertypes/entities_floors_lua.hpp
        script/usertypes/entities_activefloors_lua.cpp
        script/usertypes/entities_activefloors_lua.hpp
        script/usertypes/entities_chars_lua.cpp
        script/usertypes/entities_chars_lua.hpp
        script/usertypes/hitbox_lua.cpp
        script/usertypes/hitbox_lua.hpp
        script/usertypes/entities_fx_lua.cpp
        script/usertypes/entities_fx_lua.hpp
        script/usertypes/entities_liquids_lua.cpp
        script/usertypes/entities_liquids_lua.hpp
        script/usertypes/particles_lua.cpp
        script/usertypes/particles_lua.hpp
        script/usertypes/level_lua.cpp
        script/usertypes/level_lua.hpp
        script/usertypes/sound_lua.cpp
        script/usertypes/sound_lua.hpp
        script/usertypes/player_lua.cpp
        script/usertypes/player_lua.hpp
        script/usertypes/gui_lua.cpp
        script/usertypes/gui_lua.hpp
        script/usertypes/drops_lua.cpp
        script/usertypes/drops_lua.hpp
        script/usertypes/texture_lua.cpp
        script/usertypes/texture_lua.hpp
        script/usertypes/char_state_lua.cpp
        script/usertypes/char_state_lua.hpp
        script/usertypes/flags_lua.cpp
        script/usertypes/flags_lua.hpp
        sound_manager.cpp
        sound_manager.hpp
        fmod.hpp
        audio_buffer.hpp
        game_manager.cpp
        game_manager.hpp
        overloaded.hpp
        virtual_table.cpp
        virtual_table.hpp
        drops.cpp
        drops.hpp
        file_api.cpp
        file_api.hpp
        lua_libs/lua_libs.cpp
        lua_libs/lua_libs.hpp)
target_include_directories(spel2_api PUBLIC .)
target_link_libraries(spel2_api PUBLIC
        imgui)
target_link_libraries(spel2_api PRIVATE
        shared
        sol2::sol2
        ${LUA_LIBRARIES}
        lib_detours_overlunky)
target_compile_definitions(spel2_api PRIVATE
        SOL_ALL_SAFETIES_ON=1)
target_precompile_headers(spel2_api PRIVATE
        <sol/sol.hpp>
        <d3d11.h>)

if (MSVC)
    target_compile_options(spel2_api PRIVATE 
    /W4 /WX
    /bigobj
    /wd4201 #nonstandard extension used : nameless struct/union 
    )
else()
    target_compile_options(spel2_api PRIVATE -Wall -Wextra -pedantic -Werror)
endif()
